# mercadona

./: .gitignore  README.md  build.bat  build.sh  config.py  main.py  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
adapters/: mercadona_cli.py
core/: cart_engine.py  event_bus.py  gemini_client.py  logging_setup.py  product_matcher.py  prompt_history.py  quantity.py  recipe_engine.py  recipe_exporter.py  recipe_schema.py  semantic_matcher.py  settings_store.py  user_lists.py
tests/: conftest.py  test_cart_engine.py  test_csv_export.py  test_event_bus.py  test_mercadona_cli.py  test_product_matcher.py  test_prompt_history.py  test_quantity.py  test_recipe_engine.py  test_recipe_exporter.py  test_recipe_schema.py  test_semantic_matcher.py  test_settings_store.py  test_user_lists.py
ui/: avoid_view.py  cart_view.py  dashboard.py  pantry_view.py  recipe_view.py  search_view.py  settings_dialog.py  simple_list_view.py
