[project]
name = "ai-grocery-planner"
version = "0.1.0"
description = "AI Grocery Planner - Gemini recipes + Mercadona cart"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line-length ya controlado

[tool.black]
line-length = 100
target-version = ["py310"]
